--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
