--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "element-ui": "^2.4.5",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.15",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.5",
     "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
